Added Icons + Readme.txt Adjusted app + commands.conf

--- a/default/app.conf
+++ b/default/app.conf
@@ -1,5 +1,4 @@
 # Splunk app configuration file
-
 [ui]
 label = Splunk Supporting Add-on for erlangB math function
 is_visible = 0
@@ -7,4 +6,7 @@ is_visible = 0
 [launcher]
 description = This app provides a custom command for erlangB calculation
 author = Thorsten Ries
-version = 0.4
+version = 0.5
+
+[package]
+id = SA-erlangB
