Removed method parameter + function Adjusted Readme

--- a/default/searchbnf.conf
+++ b/default/searchbnf.conf
@@ -1,9 +1,9 @@
 [erlang-command]
-syntax = erlang field=<field> blocking_factor=<blocking_factor> result=<result> method=<method>
-shortdesc = Calculate the number of lines needed - Defaults for optional values: blocking_factor=0.0001 result=trunks method=erlangb|erlangbextended(default)
-description = Calculate the number of lines needed to support the given usage <field> in erlangs and blocking rate <blocking_factor using the Extended Erlang B formula
+syntax = erlang field=<field> blocking_factor=<blocking_factor> result=<result>
+shortdesc = Calculate the number of lines needed - Defaults for optional values: blocking_factor=0.0001 result=trunks
+description = Calculate the number of lines needed to support the given usage <field> in erlangs and blocking rate <blocking_factor using the Erlang B formula
 comment1 = Basic usage
-example1 = | erlang field=traffic blocking_factor=0.001 result=trunks method=erlangb
+example1 = | erlang field=traffic blocking_factor=0.001 result=trunks
 category = streaming
 appears-in = 6.4,6.5
 maintainer = thorstenr
