Added check_for_updates = 1 to app.conf

--- a/default/app.conf
+++ b/default/app.conf
@@ -6,7 +6,8 @@ is_visible = 0
 [launcher]
 description = This app provides a custom command for erlangB calculation
 author = Thorsten Ries
-version = 0.7
+version = 0.8
 
 [package]
 id = SA-erlangB
+check_for_updates = 1
